# daedalus

./: Cargo.toml  README.md
crates/daedalus_caps/: Cargo.toml
crates/daedalus_caps/src/: capabilities.rs  errors.rs  lib.rs  migrate.rs  program.rs
crates/daedalus_program/: Cargo.toml  build.rs
crates/daedalus_program/src/: lib.rs
crates/daedalus_service/: Cargo.toml  build.rs
crates/daedalus_service/src/: lib.rs
